# hyprhalt

./: CONTRIBUTING.md  LICENSE  README.md  STATUS.md  flow.md  hyprhalt  pyproject.toml  specs.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: bump-version.yml
daemon/: __init__.py  app_tracker.py  config.py  dbus_service.py  hyprland_ipc.py  main.py  shutdown_manager.py
docs/: hyprhalt.1  hyprhalt.1.md
ui/: detailed.qml  shell.qml  simple.qml
