[project]
name = "hyprhalt"
version = "0.1.0"
description = "Graceful shutdown utility for Hyprland with Quickshell UI"
requires-python = ">=3.11"
dependencies = [
  "dbus-python>=1.3.2",
  "PyGObject>=3.42.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
hyprhalt = "daemon.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["daemon*"]
exclude = ["ui*"]
